# academia

./: .editorconfig  .gitattributes  .gitignore  CREDIT.txt  MAKEFILE  MANUAL.txt  README.adoc  README.md  README.txt  atari-st.ini  bitmaps.h  bool_asm.i  effects.c  events.h  font16.c  ints.s  meson.build  model.h  music.h  psg.c  raster.c  renderer.h  scrn.h  scrn_asm.i  tst_mse.c  tst_mus.c  tst_rast.c  tst_sfx.c  types.h  vbl.h  vbl.s
.cppcheck/: atari_st.xml  project.cppcheck
src/: MAKEFILE  acaddom.c  arg_list.c  arg_list.h  bitmaps.c  bitmaps.h  bool.h  cpu.h  critical.c  critical.h  effects.c  effects.h  endian.h  events.c  events.h  font16.c  font16.h  ikbdcode.h  in_asm.s  in_vbl.c  in_vbl.h  input.c  input.h  ints.h  ints.i  ints.s  ints_asm.s  joy.i  model.c  model.h  mouse.i  move.c  move.h  mus_vbl.c  mus_vbl.h  music.c  music.h  num_util.c  num_util.h  psg.c  (+38 more)
